--- a/src/main/resources/META-INF/resources/templates/header.xhtml
+++ b/src/main/resources/META-INF/resources/templates/header.xhtml
@@ -16,6 +16,13 @@
                 <p:growl id="messages" />
 
                 <p:menubar>
+                    <p:menuitem value="Home" icon="pi pi-fw pi-home" outcome="/dashboard.xhtml"/>
+                     
+                    <p:submenu label="Products">
+                        <p:menuitem value="List" icon="pi pi-fw pi-align-justify" outcome="/products/productList.xhtml" />
+                        <p:menuitem value="Create" icon="pi pi-fw pi-plus" />
+                    </p:submenu>
+
                     <p:submenu label="File" icon="pi pi-fw pi-file">
                         <p:submenu label="New" icon="pi pi-fw pi-plus">
                             <p:menuitem value="Bookmark" icon="pi pi-fw pi-bookmark" />
@@ -59,7 +66,7 @@
                     <p:menuitem value="Quit" icon="pi pi-fw pi-power-off" />
 
                     <f:facet name="options">
- 
+
                         <div class="ui-input-icon-left p-mr-2">
                             <i class="pi pi-fw pi-search" />
                             <p:inputText placeholder="Search" />
@@ -71,7 +78,7 @@
                                 <p:menuitem value="Logout" url="/logout" icon="pi pi-vars" />
                             </p:submenu>
                         </p:menubar>
-     </f:facet>
+                    </f:facet>
 
 
                 </p:menubar>
