implementing dataTable for showing productList

--- a/src/main/resources/META-INF/resources/templates/header.xhtml
+++ b/src/main/resources/META-INF/resources/templates/header.xhtml
@@ -20,7 +20,7 @@
                      
                     <p:submenu label="Products">
                         <p:menuitem value="List" icon="pi pi-fw pi-align-justify" outcome="/products/productList.xhtml" />
-                        <p:menuitem value="Create" icon="pi pi-fw pi-plus" />
+                        <p:menuitem value="Create" icon="pi pi-fw pi-plus" outcome="/products/product.xhtml"/>
                     </p:submenu>
 
                     <p:submenu label="File" icon="pi pi-fw pi-file">
